Closed Bug 1230466 Opened 8 years ago Closed 8 years ago

unexpected scrollbar display

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: alice0775, Assigned: bzbarsky)

References

()

Details

(Whiteboard: [parity-IE] [parity-Chrome][parity-Edge])

Attachments

(3 files, 1 obsolete file)

Attached file reduced.zip (obsolete) —
Steps to Reproduce:
1. Open http://www.sony.jp/
   or index.html of reduced.zip

Actual Results:
horizontal scrollbar appears

Expected Results:
no horizontal scrollbar
Whiteboard: [parity-Chrome][parity-IE] → [parity-IE] [parity-Chrome][parity-Edge]
Attached file reduced.zip
Attachment #8695774 - Attachment is obsolete: true
Looks like the page sets "overflow:scroll" on the <body>, then flushes layout to compute some things, then removes it from the DOM.  During the flush we propagate the overflow style to the viewport, then the removal still leaves it there.
Attached file Minimal testcase
Oh, in the attached zip the relevant code is in libs.js, search for "viewportSize".
Looks like we call UpdateViewportScrollbarStylesOverride only on insertions (if I ignore the fullscreen stuff),  Should we add a call on frame removal too?
Flags: needinfo?(roc)
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Flags: needinfo?(roc)
https://hg.mozilla.org/mozilla-central/rev/f4eaab30e7e7
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: