Bug 1230466.  Make sure to update our scrollbar styles when a <body> is removed from the DOM, since we might now need to propagate from some other element.  r=roc